meta tag's description attributes modified

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Data Analyst Freelancer Portfolio">
+        <meta name="description" content="Data Analyst | Freelancer Portfolio : Experienced Data Analyst specializing in transforming raw data into actionable insights for informed decision-making. Proficient in data analysis, statistical modeling, and data visualization.">
         <meta name="keywords" content="data analyst, freelancer, portfolio">
         <meta name="author" content="Raju Sai Painkra">
     
