--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Data Analyst | Freelancer Portfolio : Experienced Data Analyst specializing in transforming raw data into actionable insights for informed decision-making. Proficient in data analysis, statistical modeling, and data visualization.">
-        <meta name="keywords" content="data analyst, freelancer, portfolio">
+        <meta name="keywords" content="data analyst, freelancer, portfolio, data analysis, statistics, data visualization, SQL, Python, R, machine learning, data modeling, business intelligence, data mining, data-driven decision making, Excel, data cleaning, data manipulation, dashboard development, data reporting, statistical analysis, data interpretation, data storytelling, data management, data processing, data cleansing">
         <meta name="author" content="Raju Sai Painkra">
     
         <!-- Title of the Page -->
