added Open Graph meta tags && Twitter Card meta tags section in head tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
         <meta name="keywords" content="data analyst, freelancer, portfolio, data analysis, statistics, data visualization, SQL, Python, R, machine learning, data modeling, business intelligence, data mining, data-driven decision making, Excel, data cleaning, data manipulation, dashboard development, data reporting, statistical analysis, data interpretation, data storytelling, data management, data processing, data cleansing">
         <meta name="author" content="Raju Sai Painkra">
     
+
+        <!-- Open Graph meta tags (for social media sharing, like Facebook, Linkedin) -->
+        <meta property="og:title" content="Data Analyst Freelancer Portfolio">
+        <meta property="og:description" content="Check out my data analysis projects and skills.">
+        <meta property="og:image" content="link-to-image.jpg">
+        <meta property="og:url" content="https://yourportfolio.com">
+
+
+        <!-- Twitter Card meta tags (for Twitter sharing) -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@yourtwitterhandle">
+        <meta name="twitter:title" content="Data Analyst Freelancer Portfolio">
+        <meta name="twitter:description" content="Check out my data analysis projects and skills.">
+        <meta name="twitter:image" content="link-to-image.jpg">
+
+
+
+
+
         <!-- Title of the Page -->
         <title>Raju Sai Painkra : Data Analyst | Freelancer Portfolio</title>
     
