in the open graph meta tags url added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:title" content="Raju Sai Painkra - Data Analyst | Freelancer Portfolio">
         <meta property="og:description" content="Check out my data analysis projects and skills.">
         <meta property="og:image" content="link-to-image.jpg">
-        <meta property="og:url" content="https://yourportfolio.com">
+        <meta property="og:url" content="https://rajusaipainkra.github.io/My-Portfolio/">
 
 
         <!-- Twitter Card meta tags (for Twitter sharing) -->
