--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Title of the Page -->
         <title>Raju Sai Painkra : Data Analyst | Freelancer Portfolio</title>
     
-        <!-- Favicon (replace 'favicon.ico' with your own favicon file) -->
+        <!-- Favicon  -->
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     
         <!-- External CSS (replace 'styles.css' with your own stylesheet) -->
